<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="General">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_house_solid"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_addnew"
                android:icon="@drawable/ic_circle_plus_solid"
                android:title="Add New Journal" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_gallery" />
            <item
                android:id="@+id/nav_graph"
                android:icon="@drawable/ic_chart_line_solid"
                android:title="@string/graphs" />
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_location_dot_solid"
                android:title="@string/map" />
            <item
                android:id="@+id/nav_myaccount"
                android:icon="@drawable/ic_user_solid"
                android:title="@string/my_account" />
        </menu>
    </item>

    <item android:title="SignOut">
        <menu>
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_power_off_solid"
                android:title="@string/sign_out" />
        </menu>
    </item>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_aboutus"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_privacypolicy"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/nav_applink"
                android:title="@string/journeyjournal" />
            <item
                android:id="@+id/nav_version"
                android:title="@string/version" />
        </menu>
    </item>

</menu>