<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Auth.ResetPasswordFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--            forgot password image-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/forgot_password_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/Forgot_Password_text"
                android:textColor="@color/green"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/Forgot_Password_text2"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="20sp" />

            <!--            email input-->
            <com.google.android.material.textfield.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:textColorHint="@color/ash">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/forgotpass_icon_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="20dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/forgotpass_email_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_baseline_mail_outline"
                    android:layout_gravity="center"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/forgotpass_email_icon_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovert_email"
                    android:textColor="@color/green"
                    android:layout_marginStart="5dp"
                    android:visibility="gone"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/forgotpass_progressbar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone"
                />

            <!--            reset button-->
            <Button
                android:id="@+id/resetpassbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/pink"
                android:enabled="false"
                android:padding="10dp"
                android:text="@string/reset_password"
                android:textColor="@color/btntxtdisable"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/goback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/go_back"
                android:textColor="@color/pink"
                android:textSize="20sp" />


        </LinearLayout>

    </FrameLayout>
</ScrollView>