<?xml version="1.0" encoding="utf-8"?>
<!--to scroll page-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Auth.SignUpFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

<!--            close button-->
            <ImageButton
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:padding="16dp"
                android:src="@drawable/ic_circle_xmark_solid" />

<!--            logo-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/logo" />

            <!--            email input-->
            <com.google.android.material.textfield.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:textColorHint="@color/ash" >

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textEmailAddress"
                    android:hint="@string/Email"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--            full name input-->
            <com.google.android.material.textfield.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/fullnameLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:textColorHint="@color/ash" >

                <EditText
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPersonName"
                    android:hint="@string/full_name"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--            or text-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/pass_min"
                android:textColor="@color/alert"
                android:textSize="10sp" />

            <!--            password input-->
            <com.google.android.material.textfield.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/background"
                android:textColorHint="@color/ash">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:hint="@string/Password"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--            confirm password input-->
            <com.google.android.material.textfield.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/confirmpasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/background"
                android:textColorHint="@color/ash">

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:hint="@string/Confirm_pass"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/signup_progess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"/>

<!--            signup button-->
            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/pink"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textColor="@color/btntxtdisable"
                android:textSize="20sp"
                android:textStyle="bold"
                android:enabled="false"/>


<!--            or text-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/ash"
                android:textSize="20sp" />

<!--            already have account button-->
            <TextView
                android:id="@+id/orsign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/or_signin"
                android:textColor="@color/ash"
                android:textSize="20sp" />


        </LinearLayout>

    </FrameLayout>
</ScrollView>